# CUDASieve-HIP

./: .gitignore  CMakeLists.txt
cmake/: FindHIPToolkit.cmake
include/HIPSieve/: cstest.hpp  device.cuh  global.cuh  hipsieve.hpp  host.hpp  launch.cuh  primelist.cuh  primeoutlist.cuh
samples/: benchmark.hip  sumPrimes.hip
src/: cstest.cpp  main.cpp
src/HIPSieve/: device.hip  global.hip  hipsieve.cpp  host.cpp  launch.hip  primelist.hip  primeoutlist.hip
